Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86389

QtWebengine's touch becomes unresponsive in Youtube

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.4
    • 5.15.0
    • WebEngine
    • None
    • Windows 10 2004
      Touchscreen
    • Windows
    • 7adea5999b3eb1ac77adeb0580cb98ce35eb6ffd (qt/qtwebengine/5.15)

    Description

      The problem is that drag & multi-touch events are filtered out after a few seconds of heavy touch events while browsing YouTube.

      I am also reproducing this problem using the QML example browser application (quicknanobrowser), see the attached movie.

      The problem is NOT reproducible using official Qt 5.13.2.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kiburtse Kirill Burtsev
              eeoikari Johannes Oikarinen
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes