Fix handling of more than one finger for touch event

This change addresses following wrong assumptions implemented earlier:
* fix assert condition for custom MotionEventQt: pointer index is only
  reserved only for two distinct events POINTER_UP and POINTER_DOWN,
  which represent one single non first/last pointer up and down event.
* MotionEvent API doesn't support delivering multiple touch point
  changes at once, hence code should send every touch point's up/down
  step by step to not confuse gesture detection classes in chromimum
  (ultimately fixing arising asserts which old code was triggering before).
* MotionEvent shouldn't contain more touch points then were already
  forwarded or reported released, hence every step should contain only
  part of all touch points received in handleTouchEvent.

Fixes: QTBUG-86389
Change-Id: I62275dc295494f88a6e44f36fe72f5f8227e37d4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>